fix - font loading

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,9 +15,10 @@ website:
         href: https://twitter.com/anarinsk
       - icon: rss
         href: index.xml
-  body-header: google_analytics.html
+  body-header: "google_analytics.html"
 format:
   html:
+    header: dummy.html
     theme:
         light: [cosmo, theme.scss, anari-custom.scss]
         dark: [cosmo, theme-dark.scss, anari-custom.scss]
