--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ website:
   navbar:
     right:
       - about.qmd
+      - project.qmd
       - icon: github
         href: https://github.com/anarinsk
       - icon: twitter
