--- a/pixi.toml
+++ b/pixi.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 description = "Add a short description here"
 authors = ["Junsok Huhh <anarinsk@gmail.com>"]
 channels = ["conda-forge"]
-platforms = ["osx-arm64"]
+platforms = ["linux-64", "osx-arm64"]
 
 [tasks]
 
-[dependencies]
+[target.linux-64.dependencies]
 matplotlib = "3.8.0.*"
 python = "3.11.*"
 pandas = "2.1.1.*"
@@ -16,4 +16,12 @@ scipy = "1.11.3.*"
 seaborn = "0.13.0.*"
 statsmodels = "0.14.0.*"
 jupyter = "1.0.0.*"
-r-stargazer = "5.2.3.*"
+
+[target.osx-arm64.dependencies]
+matplotlib = "3.8.0.*"
+python = "3.11.*"
+pandas = "2.1.1.*"
+scipy = "1.11.3.*"
+seaborn = "0.13.0.*"
+statsmodels = "0.14.0.*"
+jupyter = "1.0.0.*"
