--- a/pixi.toml
+++ b/pixi.toml
@@ -25,3 +25,11 @@ scipy = "1.11.3.*"
 seaborn = "0.13.0.*"
 statsmodels = "0.14.0.*"
 jupyter = "1.0.0.*"
+
+[dependencies]
+scipy = "1.11.3.*"
+seaborn = "0.13.0.*"
+matplotlib = "3.8.0.*"
+python = "3.11.*"
+pandas = "2.1.1.*"
+statsmodels = "0.14.0.*"
