--- a/pixi.toml
+++ b/pixi.toml
@@ -16,6 +16,7 @@ scipy = "1.11.3.*"
 seaborn = "0.13.0.*"
 statsmodels = "0.14.0.*"
 jupyter = "1.0.0.*"
+#stargazer = "0.*"
 
 [target.osx-arm64.dependencies]
 matplotlib = "3.8.0.*"
