--- a/pixi.toml
+++ b/pixi.toml
@@ -9,20 +9,10 @@ platforms = ["linux-64", "osx-arm64"]
 [tasks]
 
 [target.linux-64.dependencies]
-matplotlib = "3.8.0.*"
 python = "3.11.*"
-pandas = "2.1.1.*"
-scipy = "1.11.3.*"
-seaborn = "0.13.0.*"
-statsmodels = "0.14.0.*"
 
 [target.osx-arm64.dependencies]
-matplotlib = "3.8.0.*"
 python = "3.11.*"
-pandas = "2.1.1.*"
-scipy = "1.11.3.*"
-seaborn = "0.13.0.*"
-statsmodels = "0.14.0.*"
 
 [dependencies]
 scipy = "1.11.3.*"
@@ -34,5 +24,5 @@ statsmodels = "0.14.0.*"
 jupyter = "1.0.0.*"
 
 [pypi-dependencies]
-koreanize-matplotlib = "==0.1.1"
+koreanize-matplotlib = "*"
 stargazer = "*"
