--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,8 @@ website:
   favicon: "favicon.ico"
   navbar:
     right:
+      - text: "lostinbooks"
+        href: https://www.lostinbooks.club
       - about.qmd
       - project.qmd
       - icon: github
