--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,11 +18,11 @@ website:
         href: https://twitter.com/anarinsk
       - icon: rss
         href: index.xml
-  body-header: "google_analytics.html"
 format:
   html:
     #resources: 
     #  - "fonts.html"
+    include-before-body: "google_analytics.html"
     theme:
         light: [cosmo, theme.scss, anari-custom.scss]
         dark: [cosmo, theme-dark.scss, anari-custom.scss]
