--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,3 +27,5 @@ format:
         light: [cosmo, theme.scss, anari-custom.scss]
         dark: [cosmo, theme-dark.scss, anari-custom.scss]
     #css: styles.css
+excute: 
+  cache: true 
