--- a/research-items.yaml
+++ b/research-items.yaml
@@ -1,6 +1,7 @@
 - title: Decomposing Sales by ARPPU and PU
   author: Junsok Huhh
   date: 2024-05-23
+  #image: "images/preview_paper-1.jpeg"
   categories: ["mobile-game"]
   description: "A deep dive into the sales of a mobile game, breaking down the revenue change by the changes of Average Revenue Per Paying User(ARPPU) and Paying Users(PU)."
   path: "https://www.lostineconomics.com/manuscript_ARPPU-PU/"
