문서 업데이트: Quarto 설정 및 GitHub Actions 관련 내용 수정

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,5 +32,5 @@ format:
     #code-line-numbers: true
     code-block-bg: true
     code-block-border-left: "#31BAE9"
-# excute: 
-#  cache: true 
+  # execute: 
+  #  cache: true 
