HTTP 프로토콜로 'Learn' 링크 수정

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
       - text: "Show"
         href: https://show.lostineconomics.com
       - text: "Learn"
-        href: https://learn.lostineconomics.com
+        href: http://learn.lostineconomics.com
       - project.qmd
       - research.qmd
       - about.qmd
